ONM-5857: Fix z-index for .filters-navbar

--- a/public/assets/src/opennemas-webarch/less/components/_navbar.less
+++ b/public/assets/src/opennemas-webarch/less/components/_navbar.less
@@ -194,7 +194,7 @@
 }
 
 .filters-navbar {
-  z-index: 250;
+  z-index: 200;
 
   .navbar-inner {
     padding: 0 15px;
